[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Other/Oxygen_Source.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Effects/Jelly_Tentacle.gd" type="Script" id=2]
[ext_resource path="res://Assets/Other/Bubble_Particle.png" type="Texture" id=3]
[ext_resource path="res://Assets/Other/Line_Ring.png" type="Texture" id=4]
[ext_resource path="res://Assets/Entity/Oxygen_Source.png" type="Texture" id=5]
[ext_resource path="res://Assets/Other/light_use.png" type="Texture" id=6]
[ext_resource path="res://Audio/oxygenAura.mp3" type="AudioStream" id=7]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.574194, 1 )
colors = PoolColorArray( 0, 0.712891, 1, 0, 1, 1, 1, 0.886275, 0, 0.572266, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0 ), 0.0, 4.74746, 0, 0, Vector2( 0.724719, 1 ), 0.0283179, 0.0283179, 0, 0, Vector2( 1, 0 ), -8.55614, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.75
emission_shape = 5
emission_ring_radius = 100.0
emission_ring_inner_radius = 20.0
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 20.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -6.0
tangential_accel = 6.0
tangential_accel_random = 0.2
damping = 5.0
angle = 720.0
angle_random = 1.0
scale = 0.3
scale_random = 0.28
scale_curve = SubResource( 6 )
color_ramp = SubResource( 9 )

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[sub_resource type="Curve" id=3]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, -0.0996047, 0, 0, Vector2( 0.290476, 2 ), 1.44472, 1.44472, 0, 0, Vector2( 1, 0 ), -0.344142, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.240223, 1 )
colors = PoolColorArray( 0.513611, 0.871704, 0.996094, 0, 0.216965, 0.652762, 0.941406, 1, 0.65062, 0.873659, 0.910156, 1 )

[node name="Oxygen_Source" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 8388608
script = ExtResource( 1 )

[node name="Particle_Aura" type="Particles2D" parent="."]
light_mask = 3
z_index = -1
amount = 350
lifetime = 5.0
speed_scale = 0.95
randomness = 1.0
fixed_fps = 60
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="Oxy_Collide" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Oxy_String1" type="Line2D" parent="."]
position = Vector2( 0, 9.53674e-07 )
z_index = 2
width = 5.0
width_curve = SubResource( 3 )
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 4 )
joint_mode = 2
script = ExtResource( 2 )

[node name="Spin_Art1" type="Sprite" parent="."]
modulate = Color( 0, 0.52549, 1, 0.223529 )
light_mask = 2
scale = Vector2( 0.35, 0.35 )
z_index = -1
texture = ExtResource( 4 )

[node name="Spin_Art2" type="Sprite" parent="."]
modulate = Color( 0.0980392, 0.219608, 0.717647, 0.4 )
light_mask = 2
scale = Vector2( 0.25, 0.25 )
z_index = -2
texture = ExtResource( 4 )

[node name="Mid" type="Sprite" parent="."]
modulate = Color( 0.14902, 0.427451, 1, 1 )
scale = Vector2( 0.065, 0.065 )
z_index = 2
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="Mid"]
scale = Vector2( 5.33333, 5.33333 )
texture = ExtResource( 6 )
texture_scale = 1.25
energy = 0.9
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 20.0

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 25.1, 25.1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 2.0
autoplay = true
max_distance = 1000.0
area_mask = 0

[connection signal="viewport_entered" from="Visibility" to="." method="_on_Visibility_viewport_entered"]
[connection signal="viewport_exited" from="Visibility" to="." method="_on_Visibility_viewport_exited"]
